z-index fixes on heading and data panel

--- a/main.css
+++ b/main.css
@@ -84,11 +84,12 @@ body {
 }
 
 .heading {
+    position:relative;
     border-style: solid;
     border-color: white;
     border-width:1px;
     border-radius: 10px;
-    z-index: 999;
+    z-index: 951;
     margin: 20px;
 
     font-family: luminari, fantasy;
@@ -248,11 +249,12 @@ body {
   .dataNode {
     /* Have no idea why this is required for the tooltip to work. -- Miguel */
     position: relative;
-    z-index:100;
+    z-index:1000;
   }
 
   /* Tooltip text */
   .dataNode .dataPanel {
+    position:relative;
     visibility: hidden;
     width: 250px !important; 
     width:min-content;
@@ -282,5 +284,6 @@ body {
   .dataNode:hover .dataPanel {
     visibility: visible;
     opacity: 1;
+    z-index: 1000;
   } 
 /***** End of Tooltip CSS copied and modified from W3Schools *****/
